--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "kube",
+  "name": "@akshaygore1/kubebernates-management",
   "version": "1.0.0",
-  "description": "",
+  "description": "A tool for Kubernetes management",
   "main": "index.js",
+  "bin": {
+    "kubebernates-management": "./bin/cli.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "author": "",
+  "author": "Akshay Gore",
   "license": "ISC",
   "dependencies": {
     "@kubernetes/client-node": "^0.21.0",
@@ -16,5 +20,14 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
+  },
+  "keywords": [
+    "kubernetes",
+    "management",
+    "cli"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Akshaygore1/kubernates-management.git"
   }
 }
